feat: prevent update self from updating institution id